--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 $.ajax({
                     method: "GET",
                     crossDomain: true,
-                    url: "http://cricapi.com/api/matches"+apikey,
+                    url: "https://cricapi.com/api/matches"+apikey,
                     dataType: "json",
                     async: true,
                     success: function(data) {
@@ -153,7 +153,7 @@
                 $.ajax({
                     method: "GET",
                     crossDomain: true,
-                    url: "http://cricapi.com/api/matches"+apikey,
+                    url: "https://cricapi.com/api/matches"+apikey,
                     dataType: "json",
                     async: true,
                     success: function(data) {
@@ -210,7 +210,7 @@
     		            $.ajax({
     		                method: "GET",
     		                crossDomain: true,
-    		                url: "http://cricapi.com/api/cricket"+apikey,
+    		                url: "https://cricapi.com/api/cricket"+apikey,
     		                dataType: "json",
     		                async: true,
     		                success: function(data) {
@@ -237,7 +237,7 @@
     		            $.ajax({
     		                method: "GET",
     		                crossDomain: true,
-    		                url: "http://cricapi.com/api/matchCalendar"+apikey,
+    		                url: "https://cricapi.com/api/matchCalendar"+apikey,
     		                dataType: "json",
     		                async: true,
     		                success: function(data) {
@@ -265,7 +265,7 @@
     				            $.ajax({
     				                method: "GET",
     				                crossDomain: true,
-    				                url: "http://cricapi.com/api/matches"+apikey,
+    				                url: "https://cricapi.com/api/matches"+apikey,
     				                dataType: "json",
     				                async: true,
     				                success: function(data) {
