--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
     					            $.ajax({
     					                method: "GET",
     					                crossDomain: true,
-    					                url: "http://cricapi.com/api/cricketScore?unique_id="+uniqueid+"&apikey="+apkey,
+    					                url: "https://cricapi.com/api/cricketScore?unique_id="+uniqueid+"&apikey="+apkey,
     					                dataType: "json",
     					                async: true,
     					                success: function(data) {
